--- a/art./顺序表1.md
+++ b/art./顺序表1.md
@@ -1,61 +1,63 @@
 ```cpp
 //
-// Created by URLeisure
+// Created by URLeisure on 2022/4/4.
 // Description 顺序表1
 //
 #include<iostream>
+
 #define M 10+5
 using namespace std;
 
-struct Elem{
+struct Elem {
     string name;
     int age;
 };
 
-struct SqList{
+struct SqList {
     Elem *elem;
     int length;
 };
 
-bool InitList_Sq(SqList &L){
+bool InitList_Sq(SqList &L) {
     L.elem = new Elem[M];
-    if(!L.elem){
+    if (!L.elem) {
         return false;
     }
     L.length = 0;
     return true;
 }
 
-bool ListInsert_Sq(SqList &L,Elem e){
-    if(L.length>=M){
+bool ListInsert_Sq(SqList &L, Elem e) {
+    if (L.length >= M) {
         return false;
     }
-    for(int i = L.length;i>0;i--){
-        L.elem[i] = L.elem[i-1];
+    for (int i = L.length; i > 0; i--) {
+        L.elem[i] = L.elem[i - 1];
     }
     L.length++;
     L.elem[0] = e;
     return true;
 }
 
-void PrintList_Sq(SqList L){
-    for(int i = 0;i<L.length;i++){
-        cout<<L.elem[i].name<<" "<<L.elem[i].age<<endl;
+void PrintList_Sq(SqList L) {
+    for (int i = 0; i < L.length; i++) {
+        cout << L.elem[i].name << " " << L.elem[i].age << endl;
     }
 }
 
-void DestroyList_Sq(SqList &L){
-    if(L.elem){
+void DestroyList_Sq(SqList &L) {
+    if (L.elem) {
         delete L.elem;
     }
 }
-int main(){
+
+int main() {
     SqList L;
     Elem e;
     InitList_Sq(L);
-    for(int i = 0;i<10;i++){
-        cin>>e.name>>e.age;
-        ListInsert_Sq(L,e);
+    for (int i = 0; i < 10; i++) {
+        cin >> e.name >> e.age;
+        ListInsert_Sq(L, e);
     }
     PrintList_Sq(L);
     DestroyList_Sq(L);
