--- a/art./顺序表2.md
+++ b/art./顺序表2.md
@@ -1,3 +1,4 @@
+```cpp
 //
 // Created by URLeisure on 2022/4/4.
 // Description 顺序表2
@@ -96,3 +97,4 @@ int main() {
 12
 5 2 5 3 3 4 2 5 7 5 4 3
  */
+```
