--- a/art./栈-括号匹配.md
+++ b/art./栈-括号匹配.md
@@ -2,7 +2,8 @@
 //
 // Created by URLeisure on 2022/5/2.
 // Description 栈-括号匹配
-//思路：判断首位，末尾括号是不是合法的（比如第一个是 ] 就不合法）；两个栈首尾开始比较，看是不是对称的
+//思路：判断首位，末尾括号是不是合法的（比如第一个是 ] 就不合法）；两个栈首尾开始比较，看是不是对称的.懒得优化了
+
 #include<iostream>
 
 using namespace std;
