--- a/art./顺序表1.md
+++ b/art./顺序表1.md
@@ -47,7 +47,7 @@ void PrintList_Sq(SqList L) {
 
 void DestroyList_Sq(SqList &L) {
     if (L.elem) {
-        delete L.elem;
+        delete []L.elem;
     }
 }
 
