--- a/art./栈-括号匹配.md
+++ b/art./栈-括号匹配.md
@@ -42,8 +42,8 @@ bool Pop(SqStack &S, DataType &e) {
 
 void Destroy(SqStack &S) {
     if (S.base || S.top) {
-        delete S.base;
-        delete S.top;
+        delete []S.base;
+        delete []S.top;
     }
 }
 
